# DesignPattern

./: .gitignore  README.md
BigTwo/: CMakeLists.txt  bigtwo_inc.cmake  main.cpp
BigTwo/include/: AIPlayer.hpp  Deck.hpp  HumanPlayer.hpp  Player.hpp  Suit.hpp  include.cmake
BigTwo/src/: source.cmake
BigTwo/test/: CMakeLists.txt  ExampleTests.cpp  run_tests.bat  run_tests.sh
BigTwo/test/libary/: BigTwo_paser.cpp  BigTwo_paser.hpp  test.cmake  test_interface.cpp  test_interface.hpp
BigTwo/test/libary/FileIterator/: FileIterator.cpp  FileIterator.hpp
BigTwo/test/testSet/: always-play-first-card.in  fullhouse.in  illegal-actions.in  normal-no-error-play1.in  normal-no-error-play2.in  straight.in  test.in  test.out
CardGameFramework/: CMakeLists.txt  main.cpp
CardGameFramework/include/: AIPlayer.hpp  Card.hpp  CardGame.hpp  Color.hpp  Hand.hpp  Player.hpp  ShowDownAIPlayer.hpp  ShowDownCard.hpp  ShowDownHumanPlayer.hpp  ShowDownPlayer.hpp  Showdown.hpp  Uno.hpp  UnoAIPlayer.hpp  UnoCard.hpp  UnoHumanPlayer.hpp  UnoPlayer.hpp
CardGameFramework/src/: CMakeLists.txt  Card.cpp  CardGame.cpp  Color.cpp  Deck.cpp  Hand.cpp  Number.cpp  Player.cpp  ShowDownAIPlayer.cpp  ShowDownCard.cpp  ShowDownHumanPlayer.cpp  ShowDownPlayer.cpp  Showdown.cpp  Suit.cpp  Uno.cpp  UnoAIPlayer.cpp  UnoCard.cpp  UnoHumanPlayer.cpp  UnoPlayer.cpp
CardGameFramework/test/: CMakeLists.txt  ExampleTests.cpp  run_tests.bat
Collision/: CMakeLists.txt  main.cpp
Collision/include/: CollisionHandle.hpp  Fire.hpp  Hero.hpp  HeroFireHandler.hpp  HeroWaterHandler.hpp  SameTypeHandler.hpp  Sprite.hpp  Water.hpp  WaterFireHandler.hpp  World.hpp
Collision/src/: CMakeLists.txt  CollisionHandle.cpp  Fire.cpp  Hero.cpp  HeroFireHandler.cpp  HeroWaterHandler.cpp  SameTypeHandler.cpp  Sprite.cpp  Water.cpp  WaterFireHandler.cpp  World.cpp
Collision/test/: CMakeLists.txt  ExampleTests.cpp
Cs1_3/: CMakeLists.txt  main.cpp
Cs1_3/10/: CMakeLists.txt  main.cpp
Cs1_3/11/: main.cpp
Cs1_3/12/: CMakeLists.txt  main.cpp
Cs1_3/14/: main.cpp
Cs1_3/15/: main.cpp
Cs1_3/2/: CMakeLists.txt
Cs1_3/4/: main.cpp
Cs1_3/6/: CMakeLists.txt  main.cpp
Cs1_3/include/: Teacher.hpp
Cs1_H/: CMakeLists.txt  main.cpp
Cs1_H/include/: Card.hpp  ExchangeCard.hpp  Player.hpp  Rank.hpp  Showdown.hpp  Suit.hpp  Test.hpp
Cs1_H/src/: AIPlayer.cpp  CMakeLists.txt  Card.cpp  ExchangeCard.cpp  HumanPlayer.cpp  Player.cpp  Rank.cpp  Showdown.cpp  Suit.cpp
Cs1_H/test/: ExampleTests.cpp
Cs_1_2/: CMakeLists.txt  Challenge.h  Chapter.h  CheckMissionState.cpp  CheckMissionState.h  ContentScene.h  Journey.h  LevelSheet.h  Mission.h  Scene.h  Student.h  VideoScene.h  main.cpp
Cs_1_2/include/: Adventurer.h  Chapter.h  CheckMissionState.h  ContentScene.h  Journey.h  LevelSheet.h  Mission.h  Scene.h  Student.h  TourGroup.h  Utils.h  VideoScene.h  utils.h
Cs_1_2/include/utils/: utils.h
Cs_1_2/src/: Adventurer.cpp  Challenge.cpp  Chapter.cpp  CheckMissionState.cpp  ContentScene.cpp  Journey.cpp  LevelSheet.cpp  Mission.cpp  Scene.cpp  Student.cpp  VideoScene.cpp
KeyBoardShortCut/: CMakeLists.txt  main.cpp
KeyBoardShortCut/lib/: libary.cmake
Mat3D/: CMakeLists.txt  main.cpp
Mat3D/include/: Handle.hpp  MNHandle.hpp  MRHandle.hpp  Mat3D.hpp  NRHandle.hpp  PrintPlaneTemplate.hpp
Mat3D/src/: CMakeLists.txt  Handle.cpp  MNHandle.cpp  MRHandle.cpp  Mat3D.cpp  NRHandle.cpp  PrintPlaneTemplate.cpp
Mat3D/test/: CMakeLists.txt  ExampleTests.cpp
MatchSystem/: CMakeLists.txt  main.cpp
MatchSystem/include/: Coord.hpp  DistanceBase.hpp  Habit.hpp  HabitBase.hpp  Individual.hpp  MatchSystem.hpp  MatchType.hpp  Reverse.hpp
MatchSystem/include/utils/: utils.h
MatchSystem/src/: CMakeLists.txt  Coord.cpp  DistanceBase.cpp  Habit.cpp  HabitBase.cpp  Individual.cpp  MatchSystem.cpp  MatchType.cpp  Reverse.cpp
MatchSystem/test/: CMakeLists.txt  ExampleTests.cpp
OOA_Train/src/: AIPlayer.cpp
OOA_Training/1/: main.cpp
OOA_Training/11/: CMakeLists.txt  main.cpp
OOA_Training/15/: main.cpp
OOA_Training/2/: main.cpp
OOA_Training/3/: main.cpp
OOA_Training/5/: main.cpp
OOA_Training/7/: CMakeLists.txt
OOA_Training/8/: CMakeLists.txt  main.cpp
OOA_Training/9/: main.cpp
ShowDown/: CMakeLists.txt  main.cpp
ShowDown/1/: CMakeLists.txt
ShowDown/13/: CMakeLists.txt  main.cpp
ShowDown/14/: CMakeLists.txt
ShowDown/15/: CMakeLists.txt
ShowDown/3/: CMakeLists.txt
ShowDown/5/: CMakeLists.txt
ShowDown/6/: main.cpp
ShowDown/7/: main.cpp
ShowDown/9/: CMakeLists.txt
ShowDown/test/: CMakeLists.txt  ExampleTests.cpp
YtChannel/: CMakeLists.txt  main.cpp
YtChannel/test/: CMakeLists.txt  ExampleTests.cpp  run_tests.sh
friendship/: CMakeLists.txt  main.cpp
prescriber_system/: CMakeLists.txt  data.json  main.cpp
treasuremap/: CMakeLists.txt  main.cpp
treasuremap/include/: include.cmake
treasuremap/include/Game/: Adventure.hpp  RoleObstacleTouched.hpp  RoleTreasureTouched.hpp  Round.hpp  TouchedHandler.hpp
treasuremap/include/Mapobject/: Content.hpp  Coord.hpp  Mapobject.hpp  Obstacle.hpp  Treasure.hpp
treasuremap/include/Role/: Accelerated.hpp  AttackType.hpp  Charator.hpp  Erupting.hpp  FullAttack.hpp  Healing.hpp  Invincible.hpp  Monster.hpp  MonsterAttack.hpp  NormalAttack.hpp  NormalState.hpp  Orderless.hpp  Poisoned.hpp  Role.hpp  State.hpp  Stockpile.hpp  Teleport.hpp
treasuremap/src/: source.cmake
treasuremap/src/Game/: Adventure.cpp  RoleObstacleTouched.cpp  RoleTreasureTouched.cpp  Round.cpp  TouchedHandler.cpp  game.cmake
treasuremap/src/Mapobject/: Content.cpp  Coord.cpp  Mapobject.cpp  Obstacle.cpp  Treasure.cpp  mapobject.cmake
treasuremap/src/Role/: Accelerated.cpp  AttackType.cpp  Charator.cpp  Erupting.cpp  FullAttack.cpp  Healing.cpp  Invincible.cpp  Monster.cpp  MonsterAttack.cpp  NormalAttack.cpp  NormalState.cpp  Orderless.cpp  Poisoned.cpp  Role.cpp  State.cpp  Stockpile.cpp  Teleport.cpp  role.cmake
treasuremap/test/: CMakeLists.txt  ExampleTests.cpp
treasuremap/test/libary/: test.cmake
treasuremap/test/libary/FileIterator/: FileLine.cpp  FileLine.hpp
(+293 files in other folders)
